<resources>
    <string name="app_name">Reviews de Películas</string>
    <string name="boton_login">Iniciar sesion</string>
    <string name="boton_logup">Crear cuenta</string>
    <string name="hintUsuario">Nombre de usuario</string>
    <string name="hintContraseña">Contraseña</string>
    <string name="inciarsesion">Iniciar Sesión</string>
    <string name="tituloCrearCuenta">Rellena los siguientes apartados para crear la cuenta</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="usuario">Nombre de usuario</string>
    <string name="cambiarIdioma">Cambiar idioma</string>
    <string name="seleccIdioma">Selecciona un idioma</string>
    <string name="perfil">Mi cuenta</string>
    <string name="misreviews">Mis Reviews</string>
    <string name="misdatos">Mis datos</string>
    <string name="micuenta">Mi cuenta</string>
    <string name="Guardar">Guardar</string>
    <string name="title_activity_my_account">MyAccount_Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="usernameActual">Username actual</string>
    <string name="contrasenaActual">Contraseña</string>
    <string name="nombreActual">Nombre actual</string>
    <string name="apellidoActual">Apellido actual</string>
    <string name="cambiarUsername">Cambiar username</string>
    <string name="cambiarContraseña">Cambiar contraseña</string>
    <string name="cambiarNombre">Cambiar nombre</string>
    <string name="cambiarApellido">Cambiar apellido</string>
    <string name="instruccionesMyAccount">Presione sobre los datos que quiera cambiar</string>
    <string name="publicar">Publicar</string>
    <string name="escribeAqui">Escribe aquí tu reseña</string>
    <string name="review">Escriba una review para la película %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hacerReview">Escribir una review</string>
    <string name="verReviews">Reviews de la película</string>
    <string name="tituloPeli">Título de la película</string>
    <string name="poster">Póster</string>
    <string name="director">Director</string>
    <string name="anio">Año</string>
    <string name="nuevapelicula">Crear nueva película</string>
    <string name="introducirImagen">Por favor, selecciona el poster de la película</string>
    <string name="peliculaCreada">Película creada correctamente</string>
    <string name="error">Ha ocurrido un error</string>
    <string name="peliculayaexiste">Esa película ya existe</string>
    <string name="introducirimagen">Por favor, introduce una imagen</string>
    <string name="intrucciones">Instrucciones</string>
    <string name="preguntasalir">¿Seguro que quieres salir?</string>
    <string name="cancelar">Cancelar</string>
    <string name="salir">Salir</string>
    <string name="rellenarcampos">Por favor, rellene todos los campos</string>
    <string name="usuarioyaenuso">El nombre de usuario ya está en uso, por favor escoja uno nuevo</string>
    <string name="contrasenasnocoinciden">Las contraseñas no coinciden</string>
    <string name="cuentacreada">Cuenta creada</string>
    <string name="cuentacreadacorrectamente">La cuenta se ha creado correctamente</string>
    <string name="errorencriptar">Ha ocurrido un error al encriptar la contraseña</string>
    <string name="nousuario">No existe ningún usuario con ese nombre</string>
    <string name="incorrecto">Nombre de usuario o contraseña incorrecto</string>
    <string name="rellenaralguncampo">Por favor, rellene algún campo antes de guardar</string>
    <string name="datosactualizados">Datos actualizados correctamente</string>
    <string name="salirsinguardar">¿Seguro que quieres salir sin crear una nueva película?</string>
    <string name="puntuacion">Por favor, dé una puntuación a la película</string>
    <string name="resena">Por favor, escriba una reseña</string>
    <string name="vistopelicula">¿Has visto una nueva película? No te olvides de hacerle una reseña</string>
    <string name="notificacionFCM">¡Te echamos de menos!</string>
    <string name="permiso">Sin el permiso de la cámara no se puede sacar una foto</string>
    <string name="selectcamera">Cámara o galería</string>
    <string name="galeria">Galería</string>
    <string name="camarao">Cámara</string>
</resources>